--- a/data/campaigns/Delfadors_Memoirs/scenarios/12_Terror_at_the_Ford_of_Parthyn.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/12_Terror_at_the_Ford_of_Parthyn.cfg
@@ -223,7 +223,7 @@
     [/event]
 
     {PLACE_IMAGE scenery/village-human-burned1.png 34 6}    # has moveto
-    {PLACE_IMAGE scenery/village-human-burned2.png 29 13}   # has moveto
+    {PLACE_IMAGE scenery/village-human-burned2.png 30 12}   # has moveto
     {PLACE_IMAGE scenery/village-human-burned3.png 31 10}   # has moveto
     {PLACE_IMAGE scenery/village-human-burned4.png 37 17}
     {PLACE_IMAGE scenery/village-human-burned4.png 35 17}
@@ -301,7 +301,7 @@
             [then]
                 [message]
                     speaker=unit
-                    message= _ "What in the wide green world is this abomination?"
+                    message= _ "There's something there in the mist!"
                 [/message]
             [/then]
         [/if]
@@ -324,11 +324,15 @@
 
         [message]
             speaker=unit
-            message= _ "Orcs! Orcs at the Ford!"
+            message= _ "Orcs!"
+        [/message]
+        [message]
+            speaker=Chantal
+            message= _ "It seems there are orcs this far south after all. This is strange."
         [/message]
         [message]
             speaker=Delfador
-            message= _ "Prepare to fight them! We must clear the Ford!"
+            message= _ "Prepare to fight them! We must keep the Ford clear!"
         [/message]
         [fire_event]
             name=enemies
@@ -581,12 +585,12 @@
         [/message]
     [/event]
 
-    # Move to 29,13 burned village (north edge of farmed patch): empty
+    # Move to 30,12 burned village (north edge of farmed patch): empty
     [event]
         name=moveto
         [filter]
             side=1
-            x,y=29,13
+            x,y=30,12
         [/filter]
         [message]
             speaker=unit
